--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -5,6 +5,48 @@
     <title>Mi pagina de prueba</title>
   </head>
   <body>
-    <img src="/home/sepu85/Downloads/y3303910c_2.jpg" alt="Mi imagen de prueba">
+    <table>
+      <caption>Clasificacion Liga Espanola al 04 de marzo de 2019</caption>
+<th>
+  <td>Puesto</td>
+  <td>Equipo</td>
+  <td>Puntos Totales</td>
+      <td>Partidos ganados</td>
+      <td>Partidos perdidos</td>
+      <td>Partidos empatados</td>
+      <td>Goles a favor</td>
+      <td>Goles en contra</td>
+</th>
+<tr>
+  <td>1ero</td>
+  <td>Barcelona</td>
+  <td>60</td>
+  <td>18</td>
+  <td>2</td>
+  <td>6</td>
+  <td>65</td>
+  <td>25</td>
+</tr>
+<tr>
+  <td>2do</td>
+  <td>Atletico de Madrid</td>
+  <td>53</td>
+  <td>15</td>
+  <td>3</td>
+  <td>8</td>
+  <td>38</td>
+  <td>17</td>
+</tr>
+<tr>
+  <td>3ro</td>
+  <td>Real Madrid</td>
+  <td>48</td>
+  <td>15</td>
+  <td>8</td>
+  <td>3</td>
+  <td>43</td>
+  <td>31</td>
+</tr>
+</table>
   </body>
 </html>
